# cuosqp_batch

./: CMakeLists.txt
algebra/: CMakeLists.txt
algebra/cuda/: CMakeLists.txt  algebra_types.h  matrix.cu  vector.cu
include/: admm_batch_gpu.h  auxil_batch.h  osqp_api_batch.h  residual_batch_gpu.h  scaling_batch.h  spmv_batch_gpu.h  termination_batch_gpu.h
lin_sys/: CMakeLists.txt
lin_sys/cuda/cuda_pcg/: CMakeLists.txt
lin_sys/direct/: CMakeLists.txt
lin_sys/direct/qdldl/: CMakeLists.txt  qdldl_batch_gpu.cu  qdldl_batch_gpu.cuh  qdldl_batch_gpu.h  qdldl_batch_gpu_example.cu  qdldl_cuda_batch_interface.c  qdldl_cuda_batch_interface.cu  qdldl_cuda_batch_interface.h  qdldl_symbolic.c  qdldl_symbolic.h
src/: CMakeLists.txt  admm_batch_gpu.cu  auxil_batch.c  osqp_api_batch.c  residual_batch_gpu.cu  scaling_batch.c  spmv_batch_gpu.cu  termination_batch_gpu.cu
tests/: CMakeLists.txt
tests/qdldl_batch/: CMakeLists.txt  benchmark_cpu_vs_gpu.c  test_osqp_batch_api.c  test_qdldl_cuda_batch.c  test_qdldl_cuda_batch_admm.c
